<resources>
    <string name="app_name">E-Commerce</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_forgot_password">Forgot Password ?</string>
    <string name="txt_enter_email">Enter Email</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_enter_confirm_pass">Enter Confirm Password</string>
    <string name="txt_enter_name">Enter name</string>
    <string name="txt_create">Create</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_home">Home</string>
    <string name="txt_ordered">Ordered</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_favorite">Favorite</string>
    <string name="txt_no_data_found">No data found</string>
    <string name="txt_all">All</string>
    <string name="txt_electronics">Electronics</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_image">Image</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_gold_member">Gold Member</string>
    <string name="txt_information">Information</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_email">Email</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_date_of_birth">Date Of Birth</string>
    <string name="txt_address">Address</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_enter_address">Enter Address</string>
    <string name="txt_logout">Logout</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="msg_added_card">Are you sure want to add this item to cart ?</string>
    <string name="msg_added_buy">Are you sure want to buy this item  it will deliver to your saved address in profile and payment mode will be case on delivery?</string>
    <string name="txt_add_to_cart">Add to cart</string>
    <string name="txt_buy_now">Buy now</string>
    <string name="txt_only_for_you">Only For You</string>
    <string name="msg_no_internet">No network available</string>
    <string name="msg_plz_enter_valid_login">Please enter valid login details</string>
    <string name="msg_enter_valid_password">Enter valid password</string>
    <string name="msg_enter_valid_details">Please Enter valid details</string>
    <string name="something_went_wrong">Something went wrong try again</string>
    <string name="txt_success">Success</string>
    <string name="txt_original_price">Original Price:</string>
    <string name="txt_in_offer">In Offer:</string>
    <string name="txt_you_have_to_pay">You have to pay:</string>
    <string name="txt_cancel">Cancel</string>
    <string name="msg_cancel_order">Are you sure want to cancel this order ?</string>
    <string name="txt_remove">Remove</string>
    <string name="txt_openDrawer">Open</string>
    <string name="txt_closeDrawer">Close</string>
    <string name="msg_remove_dialog">Are you sure want to remove this item from cart ?</string>
    <string name="msg_plz_check_your_email">Please check your mail and reset password</string>
</resources>