<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".screens.Profile.fragments.ProfileFragment">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_tool_gradient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/newToolbar"
                layout="@layout/my_toolbar" />
        </com.google.android.material.appbar.AppBarLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Rabindra Mohanta"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/imageView"
            app:layout_constraintRight_toRightOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/txtGoldMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/txt_gold_member"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_information"
            android:textAllCaps="true"
            android:textColor="@color/gery"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGoldMember" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInformation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:singleLine="true"
                    android:text="@string/txt_user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:hint="@string/txt_enter_name"
                    android:singleLine="true"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:singleLine="true"
                    android:text="@string/txt_phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:hint="@string/txt_phone_number"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:singleLine="true"
                    android:text="@string/txt_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:hint="@string/txt_enter_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:singleLine="true"
                    android:text="@string/txt_gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/edtGender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:singleLine="true"
                    android:text="@string/txt_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:hint="@string/txt_enter_address"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/txt_submit" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>