<?xml version="1.0" encoding="utf-8"?>
<layout>

<data>
    <import type="android.view.View"/>
    <variable
        name="viewModel"
        type="alkusi.mahato.e_commerce.screens.HomeViewModel" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.Home.Fragments.HomeFragment">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isProgressbarVisible()?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_data_found"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/genderLl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/gender_filter_bg"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtElectronics"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gender_filter_bg"
                android:gravity="center"
                android:text="@string/txt_electronics"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/txtMale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gender_filter_bg"
                android:gravity="center"
                android:text="@string/txt_male"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/txtFemale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gender_filter_bg"
                android:gravity="center"
                android:text="@string/txt_female"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderLl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>