<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="alkusi.mahato.e_commerce.screens.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.Auth.Fragments.LoginFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/login_bg_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_100sdp"
            app:cardCornerRadius="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/txt_sign_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldEmail"
                    app:placeholderTextColor="@color/black"
                    style=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSignin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg"
                        android:hint="@string/txt_enter_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.edtEmail}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldPassword"
                    style=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFieldEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg"
                        android:hint="@string/txt_enter_password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.edtPassword}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:onClick="@{viewModel::onForgotPasswordClick}"
                    android:text="@string/txt_forgot_password"
                    app:layout_constraintHorizontal_bias="0.93"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />

                <android.widget.Button
                    android:background="@drawable/button_bg"
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:enabled="@{viewModel.isEnableLoginBtn}"
                    android:onClick="@{viewModel.onLoginBtnClick}"
                    android:text="@string/txt_login"
                    android:textAllCaps="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtForgotPass" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.isProgressBarVisible?View.VISIBLE:View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <android.widget.Button
            android:background="@drawable/button_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:onClick="@{viewModel.onSignupBtnClick}"
            android:text="@string/txt_register"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>